add more meta tags for better SEO and un-styled header and footer

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
+    <meta name="author" content="Ala Eddin Abugrara">
     <title>Contacts - Let's get in touch</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+           <ul role="menubar">
+              <li><a href="index.html" role="menuitem">Home</a></li>
+              <li><a href="about.html" role="menuitem">About</a></li>
+              <li><a href="contact.html" role="menuitem">Contacts</a></li>
+           </ul>
+        </nav>
+    </header>
+    <hr>
+
+
+    <footer>
+        <p>Find me on</p>
+        <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
+        <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
+        <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
+    </footer>
 </body>
 </html>
