--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Ala Eddin Abugrara web developer portfolio landing page">
     <meta name="author" content="Ala Eddin Abugrara">
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">   
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>Ala Eddin Abugrara - web developer</title>
 </head>
 <body>
