add first layout and temporary content in index.html and add jpeg portrait of myself

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
         </nav>
     </header>
     <hr>
-
+    <main>
+        <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait"> 
+        <div>
+            <h1>Hello World!</h1>
+            <p>
+                My name is Alà Eddin. <br>
+                I am a <span> &nbsp&ltweb&gt&nbsp</span> developer from Libya.
+            </p>
+            <a>Check out some of my code</a> 
+        </div>
+    </main>
 
     <footer>
         <p>Find me on</p>
