add first layout and content to contact.html

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,34 @@
         </nav>
     </header>
     <hr>
+    <div>
+        <h1>Contacts!</h1>
 
+        <section>
+            Alà Eddin Abugrara<br>
+            Schleißheimer Straße 131<br>
+            80797 Munich<br>
+            Germany<br>
+            <br>
+            Tel <a href="tel:+491234567">+49 176 36369374‬</a><br>
+            Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a><br>
+            Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a>
+        </section> <br>
+        <a href="mailto:alaeddin.abugrara@gmail.com"><button>Mail me</button></a>
+        <form action="#" method="post" id="contact-form">
+            <p>Or write me a message:</p>
+            <label for="contact-email">*Email: </label><br>
+            <input id="contact-email" type="email" required>
+            <br>
+            <label for="contact-tel">Telephone: </label> <br>
+            <input id="contact-tel" type="tel">
+            <br> <br>
+            <label for="contact-mes" >*Message: </label><br>
+            <textarea id="contact-mes" required maxlength="240" placeholder="240 characters left"></textarea>
+            <br>
+            <input type="submit" value="Send message">
+        </form>
+    </div>
 
     <footer>
         <p>Find me on</p>
