--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,16 @@
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">   
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Contacts - Let's get in touch</title>
 </head>
 <body>
-    <header>
-        <nav>
-           <ul role="menubar">
-              <li><a href="index.html" role="menuitem">Home</a></li>
-              <li><a href="about.html" role="menuitem">About</a></li>
-              <li><a href="contact.html" role="menuitem">Contacts</a></li>
+    <header class="page-header">
+        <nav class="main-navigation page-header__item">
+           <ul role="menubar" class="navigation-list">
+              <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
+              <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
+              <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
         </nav>
     </header>
