--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">   
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Ala Eddin Abugrara - web developer</title>
 </head>
 <body>
-    <header>
-        <nav>
-           <ul role="menubar">
-              <li><a href="index.html" role="menuitem">Home</a></li>
-              <li><a href="about.html" role="menuitem">About</a></li>
-              <li><a href="contact.html" role="menuitem">Contacts</a></li>
+    <header class="page-header">
+        <nav class="main-navigation page-header__item">
+           <ul role="menubar" class="navigation-list">
+              <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
+              <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
+              <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
         </nav>
     </header>
-    <hr>
-    <main>
-        <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait"> 
-        <div>
+    <hr class="hr-break">
+
+    <main class="profile">
+        <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"> 
+        <div class="profile-description">
             <h1>Hello World!</h1>
             <p>
                 My name is Alà Eddin. <br>
-                I am a <span> &nbsp&ltweb&gt&nbsp</span> developer from Libya.
+                I am a <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer from Libya.
             </p>
-            <a>Check out some of my code</a> 
+            <a href="#">Check out some of my code</a> 
         </div>
     </main>
 
     <footer>
         <p>Find me on</p>
-        <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
-        <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
-        <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
+        <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github"></a>
+        <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter"></a>
+        <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn"></a>
     </footer>
 
     <script src="js/tota11y.min.js"></script>
