--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header class="page-header">
+        <a href="index.html"> <img src="#" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
