--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,9 @@
            </ul>
         </nav>
     </header>
-    <hr>
-    <div>
+    <hr class="hr-break">
+
+    <div class="contact">
         <h1>Contacts!</h1>
 
         <section>
@@ -34,24 +35,25 @@
             <br>
             Tel <a href="tel:+491234567">+49 176 36369374‬</a><br>
             Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a><br>
-            Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a>
-        </section> <br>
-        <a href="mailto:alaeddin.abugrara@gmail.com"><button>Mail me</button></a>
+            Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>  
+            <a href="mailto:alaeddin.abugrara@gmail.com"><button>Mail me</button></a>
+        </section> 
+
         <form action="#" method="post" id="contact-form">
             <p>Or write me a message:</p>
-            <label for="contact-email">*Email: </label><br>
+            <label class="standard-label" for="contact-email">*Email: </label><br>
             <input id="contact-email" type="email" required>
             <br>
-            <label for="contact-tel">Telephone: </label> <br>
+            <label class="standard-label" for="contact-tel">Telephone: </label> <br>
             <input id="contact-tel" type="tel">
             <br> <br>
-            <label for="contact-mes" >*Message: </label><br>
+            <label class="standard-label last" for="contact-mes" >*Message: </label><br>
             <textarea id="contact-mes" required maxlength="240" placeholder="240 characters left"></textarea>
             <br>
-            <input type="submit" value="Send message">
+            <input type="submit" value="Send message" class="button" >
         </form>
     </div>
-
+    
     <footer>
         <p>Find me on</p>
         <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
