--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,10 @@
         <a href="index.html"> <img src="#" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
-              <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
+              <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
               <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-              <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
+              <li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
+              <li><a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contacts</a></li>
            </ul>
         </nav>
     </header>
