--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
               <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
+              <li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
               <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
         </nav>
