add more stylings and CSS processors and variables

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Information about Ala Eddin Abugrara">
     <meta name="author" content="Ala Eddin Abugrara">
-    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">   
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>About me</title>
@@ -27,14 +28,14 @@
 
     <div class="about-container">
       <h1 class="about-container__item">About me</h1>
-  
+
       <h2 class="about-container__item">My name is Aladin and Lorem ipsum dolor sit.</h2>
       <p class="about-container__item">
-        Born in a multicultural and always changing environment I hade the the possibility to<br> 
+        Born in a multicultural and always changing environment I hade the the possibility to<br>
         Aut quia recusandae placeat earum reiciendis eos quae, nulla ea veritatis est.<br>
         culpa voluptate quaerat voluptatibus error.
       </p class="about-container__item">
-  
+
       <ul class="about-container__item" id="enjoyingList">
         <label for="enjoyingList"><strong>What I enjoy doing:</strong></label>
         <li>Frontend development</li>
@@ -47,12 +48,12 @@
       <p class="about-container__item">Everything you need to know about my path.</p>
       <p class="about-container__item">More information</p>
       <p class="about-container__item">More information</p>
-  
-  
+
+
       <table class="about-container__item">
         <thead>
           <tr>
-            <th>Skills</th> 
+            <th>Skills</th>
             <th>Years of Experience</th>
             <th>Level of Expertise</th>
           </tr>
@@ -75,10 +76,10 @@
           </tr>
         </tbody>
       </table> <br>
-    
+
       <a href="#" class="button about-container__item" download>Download my CV</a><br>
     </div> <!-- about-container-->
-    
+
     <footer>
         <p>Find me on</p>
         <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
