--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
     <meta name="author" content="Ala Eddin Abugrara">
-    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">   
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Contacts - Let's get in touch</title>
@@ -36,9 +37,9 @@
             <br>
             Tel <a href="tel:+491234567">+49 176 36369374‬</a><br>
             Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a><br>
-            Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>  
+            Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>
             <a href="mailto:alaeddin.abugrara@gmail.com"><button>Mail me</button></a>
-        </section> 
+        </section>
 
         <form action="#" method="post" id="contact-form">
             <p>Or write me a message:</p>
@@ -47,11 +48,11 @@
             <br>
             <label class="standard-label" for="contact-tel">Telephone: </label> <br>
             <input id="contact-tel" type="tel">
-            <br> <br>
+            <br><br>
             <label class="standard-label last" for="contact-mes" >*Message: </label><br>
             <textarea id="contact-mes" required maxlength="240" placeholder="240 characters left"></textarea>
             <br>
-            <input type="submit" value="Send message" class="button" >
+            <input type="submit" value="Send message" class="button">
         </form>
     </div>
     
