--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Ala Eddin Abugrara web developer portfolio landing page">
     <meta name="author" content="Ala Eddin Abugrara">
-    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">   
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Ala Eddin Abugrara - web developer</title>
@@ -26,14 +27,14 @@
     <hr class="hr-break">
 
     <main class="profile">
-        <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"> 
+        <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait">
         <div class="profile-description">
             <h1>Hello World!</h1>
             <p>
                 My name is Alà Eddin. <br>
                 I am a <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer from Libya.
             </p>
-            <a href="#">Check out some of my code</a> 
+            <a href="#">Check out some of my code</a>
         </div>
     </main>
 
