--- a/work.html
+++ b/work.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Ala Eddin Abugrara contacts">
     <meta name="author" content="Ala Eddin Abugrara">
-    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">    
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>My work</title>
 </head>
 <body>
     <header class="page-header">
-        <a href="index.html"> <img src="#" alt="personal logo" alt="logo" class="page-header__item navigation__logo"> </a>
+        <a href="index.html"> <img src="#" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
