add dropdown alternative menu for mobile optimisation

--- a/about.html
+++ b/about.html
@@ -22,6 +22,16 @@
               <li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
               <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
+           <div class="dropdown-menu">
+              <button class="dropbtn button">&#9776</button>
+              <div class="dropdown-menu-list">
+                  <a href="index.html">Home </a>
+                  <a href="about.html">About</a>
+                  <a href="contact.html">Contact</a>
+                  <a href="work.html">Work</a>
+              </div>
+            </div>
+          </nav>
         </nav>
     </header>
     <hr class="hr-break">
