change colors and font

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Archivo+Narrow:700" rel="stylesheet">    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Contacts - Let's get in touch</title>
 </head>
@@ -48,7 +47,8 @@
             Tel <a href="tel:+491234567">+49 176 36369374‬</a><br>
             Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a><br>
             Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>
-            <a href="mailto:alaeddin.abugrara@gmail.com"><button>Mail me</button></a>
+            <a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a>
+            
         </section>
 
         <form action="#" method="post" id="contact-form">
