add changes to media queries size responsiveness

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@
             </nav>
         </nav>
     </header>
-    <hr class="hr-break">
+    <!-- <hr class="hr-break"> -->
  
-    <div class="contact">
+    <div class="contact-container">
         <h1>Contacts!</h1>
 
-        <section>
+        <section class="contact-item">
             Alà Eddin Abugrara<br>
             Schleißheimer Straße 131<br>
             80797 Munich<br>
@@ -51,7 +51,7 @@
             
         </section>
 
-        <form action="#" method="post" id="contact-form">
+        <form action="#" method="post" id="contact-form" class="contact-item">
             <p>Or write me a message:</p>
             <label class="standard-label" for="contact-email">*Email: </label><br>
             <input id="contact-email" type="email" required>
