--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </nav>
     </header>
-    <hr class="hr-break">
+    <!-- <hr class="hr-break"> -->
 
     <main class="profile">
         <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait">
