--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
             </nav>
         </nav>
     </header>
-    <hr class="hr-break">
+    <!-- <hr class="hr-break"> -->
 
     <section>
         <h1>Work</h1>
