--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
           </nav>
         </nav>
     </header>
-    <hr class="hr-break">
+    <!-- <hr class="hr-break"> -->
 
     <div class="about-container">
       <h1 class="about-container__item">About me</h1>
