add logo to header

--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <header class="page-header">
-        <a href="index.html"> <img src="#" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
+        <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
+        <img src="img/logoname.png" alt="personal logo" alt="logo" class="page-header__item navigation__logoname">
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
