changed font again + minor changes

--- a/about.html
+++ b/about.html
@@ -7,95 +7,88 @@
     <meta name="description" content="Information about Ala Eddin Abugrara">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Archivo+Narrow:700" rel="stylesheet">    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC|Noto+Serif:700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>About me</title>
 </head>
 <body>
-    <header class="page-header">
-        <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
-        <img src="img/logoname.png" alt="personal logo" alt="logo" class="page-header__item navigation__logoname">
-        <nav class="main-navigation page-header__item">
-           <ul role="menubar" class="navigation-list">
-              <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
-              <li><a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a></li>
-              <li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
-              <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
-           </ul>
-           <div class="dropdown-menu">
-              <button class="dropbtn button">&#9776</button>
-              <div class="dropdown-menu-list">
-                  <a href="index.html">Home </a>
-                  <a href="about.html">About</a>
-                  <a href="contact.html">Contact</a>
-                  <a href="work.html">Work</a>
-              </div>
+  <header class="page-header">
+      <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
+      <img src="img/logoname.png" alt="personal logo" alt="logo" class="page-header__item navigation__logoname">
+      <nav class="main-navigation page-header__item">
+          <ul role="menubar" class="navigation-list">
+            <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
+            <li><a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a></li>
+            <li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
+            <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
+          </ul>
+          <div class="dropdown-menu">
+            <button class="dropbtn button">&#9776</button>
+            <div class="dropdown-menu-list">
+                <a href="index.html">Home </a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="work.html">Work</a>
             </div>
-          </nav>
+          </div>
         </nav>
-    </header>
-    <!-- <hr class="hr-break"> -->
-
-    <div class="about-container">
-      <h1 class="about-container__item">About me</h1>
-
-      <h2 class="about-container__item">My name is Aladin and Lorem ipsum dolor sit.</h2>
-      <p class="about-container__item">
-        Born in a multicultural and always changing environment I hade the the possibility to<br>
-        Aut quia recusandae placeat earum reiciendis eos quae, nulla ea veritatis est.<br>
-        culpa voluptate quaerat voluptatibus error.
-      </p class="about-container__item">
-
-      <ul class="about-container__item" id="enjoyingList">
-        <label for="enjoyingList"><strong>What I enjoy doing:</strong></label>
-        <li>Frontend development</li>
-        <li>Backend development</li>
-        <li>Test-driven development</li>
-        <li>Playing my Bass</li>
-      </ul>
-    
-      <h2 class="about-container__item">How I became a web developer</h2>
-      <p class="about-container__item">Everything you need to know about my path.</p>
-      <p class="about-container__item">More information</p>
-      <p class="about-container__item">More information</p>
-
-      <table class="about-container__item">
-        <thead>
-          <tr>
-            <th>Skills</th>
-            <th>Years of Experience</th>
-            <th>Level of Expertise</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>HTML</td>
-            <td>2</td>
-            <td>Intermediate</td>
-          </tr>
-          <tr>
-            <td>CSS</td>
-            <td>2</td>
-            <td>Intermediate</td>
-          </tr>
-          <tr>
-            <td>JavaScript</td>
-            <td>1</td>
-            <td>Beginner</td>
-          </tr>
-        </tbody>
-      </table> <br>
-
-      <a href="#" class="button about-container__item" download>Download my CV</a><br>
-    </div> <!-- about-container-->
-
-    <footer>
-        <p>Find me on</p>
-        <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
-        <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
-        <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
-    </footer>
-
-    <script src="js/tota11y.min.js"></script>
+      </nav>
+  </header>
+  <!-- <hr class="hr-break"> -->
+  <div class="about-container">
+    <h1 class="about-container__item">About me</h1>
+    <h2 class="about-container__item">My name is Aladin and Lorem ipsum dolor sit.</h2>
+    <p class="about-container__item">
+      Born in a multicultural and always changing environment I hade the the possibility to<br>
+      Aut quia recusandae placeat earum reiciendis eos quae, nulla ea veritatis est.<br>
+      culpa voluptate quaerat voluptatibus error.
+    </p class="about-container__item">
+    <ul class="about-container__item" id="enjoyingList">
+      <label for="enjoyingList"><strong>What I enjoy doing:</strong></label>
+      <li>Frontend development</li>
+      <li>Backend development</li>
+      <li>Test-driven development</li>
+      <li>Playing my Bass</li>
+    </ul>
+    <h2 class="about-container__item">How I became a web developer</h2>
+    <p class="about-container__item">Everything you need to know about my path.</p>
+    <p class="about-container__item">More information</p>
+    <p class="about-container__item">More information</p>
+    <table class="about-container__item">
+      <thead>
+        <tr>
+          <th>Skills</th>
+          <th>Years of Experience</th>
+          <th>Level of Expertise</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>HTML</td>
+          <td>2</td>
+          <td>Intermediate</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>2</td>
+          <td>Intermediate</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>1</td>
+          <td>Beginner</td>
+        </tr>
+      </tbody>
+    </table> <br>
+    <a href="#" class="button about-container__item" download>Download my CV</a><br>
+  </div> <!-- about-container-->
+  <footer>
+      <p>Find me on</p>
+      <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
+      <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
+      <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
+  </footer>
+  <script src="js/tota11y.min.js"></script>
 </body>
 </html>
