--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Archivo+Narrow:700" rel="stylesheet">    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC|Noto+Serif:700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Contacts - Let's get in touch</title>
 </head>
@@ -35,10 +36,8 @@
         </nav>
     </header>
     <!-- <hr class="hr-break"> -->
- 
     <div class="contact-container">
         <h1>Contacts!</h1>
-
         <section class="contact-item">
             Alà Eddin Abugrara<br>
             Schleißheimer Straße 131<br>
@@ -49,31 +48,27 @@
             Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a><br>
             Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>
             <a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a>
-            
         </section>
-
         <form action="#" method="post" id="contact-form" class="contact-item">
             <p>Or write me a message:</p>
-            <label class="standard-label" for="contact-email">*Email: </label><br>
+            <label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label><br>
             <input id="contact-email" type="email" required>
             <br>
             <label class="standard-label" for="contact-tel">Telephone: </label> <br>
             <input id="contact-tel" type="tel">
             <br><br>
-            <label class="standard-label last" for="contact-mes" >*Message: </label><br>
+            <label class="standard-label last" for="contact-mes" >Message: <span class="legend">(required)</span> </label><br>
             <textarea id="contact-mes" required maxlength="240" placeholder="240 characters left"></textarea>
             <br>
             <input type="submit" value="Send message" class="button">
         </form>
     </div>
-    
     <footer>
         <p>Find me on</p>
         <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
         <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
         <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
     </footer>
-
     <script src="js/tota11y.min.js"></script>
 </body>
 </html>
