--- a/work.html
+++ b/work.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Ala Eddin Abugrara contacts">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Archivo+Narrow:700" rel="stylesheet">    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC|Noto+Serif:700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>My work</title>
 </head>
@@ -83,14 +84,12 @@
             </div>
         </div>
     </section>
-
     <footer>
         <p>Find me on</p>
         <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github"></a>
         <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter"></a>
         <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn"></a>
     </footer>
-
     <script src="js/tota11y.min.js"></script>
 </body>
 </html>
