change name logo from png to text and social media icon color

--- a/work.html
+++ b/work.html
@@ -14,8 +14,11 @@
 </head>
 <body>
     <header class="page-header">
-        <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
-        <img src="img/logoname.png" alt="personal logo" alt="logo" class="page-header__item navigation__logoname">
+        <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
+        <p class="namelogo">
+            <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
+            <span class="namelogo-caption">Web-developer </span>
+        </p>        
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
@@ -40,13 +43,6 @@
     <section>
         <h1>Work</h1>
         <div class="project-list">
-            <div class="project-list__item">
-                <h2>Mobile web app</h2>
-                <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-                </p>
-                <a href="#">See project on GitHub</a>
-            </div>
             <div class="project-list__item">
                 <h2>Mobile web app</h2>
                 <p>
