--- a/about.html
+++ b/about.html
@@ -14,8 +14,11 @@
 </head>
 <body>
   <header class="page-header">
-      <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
-      <img src="img/logoname.png" alt="personal logo" alt="logo" class="page-header__item navigation__logoname">
+      <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
+      <p class="namelogo">
+          <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
+          <span class="namelogo-caption">Web-developer </span>
+      </p>
       <nav class="main-navigation page-header__item">
           <ul role="menubar" class="navigation-list">
             <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
