--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
     <header class="page-header">
         <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
-        <img src="img/logoname.png" alt="personal logo" alt="logo" class="page-header__item navigation__logoname">
+        <p class="namelogo">
+            <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
+            <span class="namelogo-caption">Web-developer </span>
+        </p>
         <nav class="main-navigation page-header__item">
            <ul role="menubar" class="navigation-list">
               <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
@@ -43,7 +46,7 @@
                 My name is Alà Eddin. <br>
                 I am a <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer from Libya.
             </p>
-            <a href="#">Check out some of my code</a>
+            <a href="work.html">Check out some of my code</a>
         </div>
     </main>
     <footer>
