add SVG animation and minor changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1>Hello World!</h1>
             <p>
                 My name is Alà Eddin. <br>
-                I am a <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer from Libya.
+                I am a <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer based in Munich
             </p>
             <a href="work.html">Check out some of my code</a>
         </div>
