change font family

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Information about Ala Eddin Abugrara">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC|Noto+Serif:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caudex|Merriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
