--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Ala Eddin Abugrara web developer portfolio landing page">
     <meta name="author" content="Ala Eddin Abugrara">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC|Noto+Serif:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caudex|Merriweather:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Ala Eddin Abugrara - web developer</title>
