--- a/about.html
+++ b/about.html
@@ -70,32 +70,64 @@
         but also standing at the edge of an ocean and I cant wait to go sailing!
     </p>
     
-    <table class="about-container__item title">
-      <thead>
-        <tr>
-          <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Expertise</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>2</td>
-          <td>Intermediate</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>1</td>
-          <td>Beginner</td>
-        </tr>
-      </tbody>
-    </table> <br>
+  <div class="front-end-skill about-container__item">
+        <h3>Front-end</h3>
+        <table>
+            <thead>
+                <tr>
+                <th>Skills</th>
+                <th>Level</th>
+                <th>Years of Experience</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td>HTML</td>
+                <td>Intermediate</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>CSS</td>
+                <td>Intermediate</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>JavaScript</td>
+                <td>Beginner</td>
+                <td>1</td>
+                </tr>
+            </tbody>
+        </table>
+  </div>
+  <div class="back-end-skill about-container__item">
+        <table>
+            <h3>Back-end</h3>
+            <thead>
+                <tr>
+                <th>Skills</th>
+                <th>Level</th>
+                <th>Years of Experience</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td>Node.js</td>
+                <td>Beginner</td>
+                <td>1</td>
+                </tr>
+                <tr>
+                <td>Express</td>
+                <td>Beginner</td>
+                <td>1</td>
+                </tr>
+                <tr>
+                <td>noSQL</td>
+                <td>Beginner</td>
+                <td>1</td>
+                </tr>
+            </tbody>
+        </table>
+  </div>
     <a href="#" class="button about-container__item centerBtn" download>Download my CV</a><br>
   </div> <!-- about-container-->
 
