add first content to work.html

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
           </div>
         </nav>
     </header>
-    <!-- <hr class="hr-break"> -->
-    <main class="profile">
+    <main class="profile-container">
         <img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait">
         <div class="profile-description">
             <h1>Hello World!</h1>
             <p>
                 My name is Alà Eddin. <br>
-                I am a <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer based in Munich
+                I am a junior <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer based in Munich
             </p>
             <a href="work.html">Check out some of my code</a>
         </div>
