--- a/work.html
+++ b/work.html
@@ -38,48 +38,67 @@
             </nav>
         </nav>
     </header>
-    <!-- <hr class="hr-break"> -->
-
-    <section>
+    <div class="work-container">
         <h1>Work</h1>
         <div class="project-list">
             <div class="project-list__item">
-                <h2>Mobile web app</h2>
+                <h2>My Portfolio</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    Yes, the very one you're looking at! <br>
+                    I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and 
+                    mobile responsiveness have a look at the code for more details 
+                </p>
+                <a href="https://github.com/Funkateer/website-portfolio">See project on GitHub</a>
+            </div>
+            <div class="project-list__item">
+                <h2>RGB Color guessing game</h2>
+                <p>
+                    I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether 
+                    playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color 
+                </p>
+                <a href="https://github.com/Funkateer/colorGame">See project on GitHub</a>
+            </div>
+            <div class="project-list__item">
+                <h2>Circles</h2>
+                <p>
+                    A simple yet fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound, 
+                    I used two libraries paper-full for the shapes and howler for sound effects
+                </p>
+                <a href="https://github.com/Funkateer/circles">See project on GitHub</a>
+            </div>
+            <div class="project-list__item">
+                <h2>Todo list app</h2>
+                <p>
+                    The todo list using jQuery, the inevitable! <br>
+                </p>
+                <a href="https://github.com/Funkateer/todoList">See project on GitHub</a>
+            </div>
+            <div class="project-list__item">
+                <h2>Camping ground rating app </h2>
+                <p>
+                    Fully functional front and back-end app I used Node with Express and mongoose for the server side and Mongo db for database
+                    among other libraries
                 </p>
                 <a href="#">See project on GitHub</a>
             </div>
             <div class="project-list__item">
-                <h2>Mobile web app</h2>
+                <h2>Movies database search</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    An app that gives information about movies searched using any word using API's
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="https://github.com/Funkateer/Movie-Search-App">See project on GitHub</a>
             </div>
             <div class="project-list__item">
-                <h2>Mobile web app</h2>
+                <h2>Your project</h2>
                 <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
+                    I'm eager to be part of a team which I believe is the best way to elevate my skills and becoming a better developer, have a look at my <a href="#" target="_blank">VC</a>
+                    for a listed and more detailed formation about my skills and experiences
+                    
                 </p>
-                <a href="#">See project on GitHub</a>
-            </div>
-            <div class="project-list__item">
-                <h2>Mobile web app</h2>
-                <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-                </p>
-                <a href="#">See project on GitHub</a>
-            </div>
-            <div class="project-list__item">
-                <h2>Mobile web app</h2>
-                <p>
-                    Within this project, I was responsible for the frontend. It’s written in React.js. Additionally, I've created the HTML and CSS templates.
-                </p>
-                <a href="#">See project on GitHub</a>
+                <a href="contact.html" class="button">Lets get in touch</a>
             </div>
         </div>
-    </section>
+    </div>
     <footer>
         <p>Find me on</p>
         <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github"></a>
