change repo dir

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="page-header">
-        <a href="index.html"> <img src="img/logo.png" alt="personal logo" alt="logo" class="page-header__item navigation__logo"></a>
+        <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
         <p class="namelogo">
             <span class="namelogo-name">ALA EDDIN ABUGRARA</span> <br>
             <span class="namelogo-caption">Web-developer </span>
@@ -27,13 +27,13 @@
               <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
            <div class="dropdown-menu">
-            <button class="dropbtn button">&#9776</button>
-            <div class="dropdown-menu-list">
-                <a href="index.html">Home </a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                <a href="work.html">Work</a>
-            </div>
+                <button class="dropbtn button">&#9776</button>
+                <div class="dropdown-menu-list">
+                    <a href="index.html">Home </a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="work.html">Work</a>
+                </div>
           </div>
         </nav>
     </header>
