--- a/work.html
+++ b/work.html
@@ -90,7 +90,8 @@
             <div class="project-list__item">
                 <h2>Your project</h2>
                 <p>
-                    I'm eager to be part of a team which I believe is the best way to elevate my skills and becoming a better developer, have a look at my <a href="#" target="_blank">VC</a>
+                    I'm eager to be part of a team which I believe is the best way to elevate my skills and becoming a better developer, 
+                    have a look at my <a href="#" target="_blank">CV</a>
                     for a listed and more detailed formation about my skills and experiences
                     
                 </p>
