fix lint errors for all html

--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
               <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
            <div class="dropdown-menu">
-                <button class="dropbtn button">&#9776</button>
+                <button class="dropbtn button">&#9776;</button>
                 <div class="dropdown-menu-list">
                     <a href="index.html">Home </a>
                     <a href="about.html">About</a>
