--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
               <li><a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contacts</a></li>
            </ul>
            <div class="dropdown-menu">
-                <button class="dropbtn button">&#9776</button>
+                <button class="dropbtn button">&#9776;</button>
                 <div class="dropdown-menu-list">
                     <a href="index.html">Home </a>
                     <a href="about.html">About</a>
@@ -38,8 +38,8 @@
         </nav>
     </header>
     <div class="contact-container">
-        <h1>Contacts!</h1>
         <section class="contact-item">
+            <h1>Contacts!</h1>
             Alà Eddin Abugrara<br>
             Schleißheimer Straße 131<br>
             80797 Munich<br>
