--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
            </ul>
            <div class="dropdown-menu">
-                <button class="dropbtn button">&#9776</button>
+                <button class="dropbtn button">&#9776;</button>
                 <div class="dropdown-menu-list">
                     <a href="index.html">Home </a>
                     <a href="about.html">About</a>
@@ -43,7 +43,7 @@
             <h1>Hello World!</h1>
             <p>
                 My name is Alà Eddin. <br>
-                I am a junior <span class="B-Btext"> &nbsp&ltweb&gt&nbsp</span> developer based in Munich
+                I am a junior <span class="B-Btext"> &nbsp;&lt;web&gt;&nbsp;</span> developer based in Munich
             </p>
             <a href="work.html">Check out some of my code</a>
         </div>
