some changes in about description under Tutor suggestions

--- a/about.html
+++ b/about.html
@@ -51,21 +51,20 @@
     </p>
     <h2 class="about-container__item title">How I became a web developer</h2>
     <p class="about-container__item">
-        My interest for programming started a few years ago while looking at my wife coding. I wanted to understand what was that 
+        My interest in programming started a few years ago while looking at my wife coding. I wanted to understand what was that 
         weird looking screen with opened terminals and lines of, what was for me then, gibberish! I decided to learn Python but then 
-        I stumbled on what would become let’s say my third love, Javascript! I got immediately hooked, the more I knew the more I 
-        wanted to know. It was like learning to play music all over again, I started to look around for material, documentations 
-        and tutorials about the whole HTML5 shebang!
+        I stumbled on what would become let’s say, my third love, Javascript! I got immediately hooked, the more I knew the more I 
+        wanted to know. It was like learning to play music all over again.
     </p>
     <p class="about-container__item">
         I started to practice this new skill to get my feet wet. As you may assume, I went through numerous courses on the main learning 
-        portals, cementing my knowledge of HTML, CSS, Javascript and the respective frameworks and libraries. I also took my first peak 
-        at back-end technologies (because let’s be honest,there is where the magic start to happen) with the goal of becoming a 
+        portals, cementing my knowledge of HTML, CSS, Javascript and the respective frameworks and libraries. I also took my first peek 
+        at back-end technologies (because let’s be honest, there is where the magic start to happen) with the goal of becoming a 
         MERN stack developer. 
     </p>
     <p class="about-container__item">
         Looking back to all that SASS, Bootstrap, jQuery, React, Node, Express, Mongo and whatnot I’m feeling my feet getting wet, yes, 
-        but also standing at the edge of an ocean and I cant wait to go sailing!
+        but also standing at the edge of an ocean and I can't wait to go sailing!
     </p>
     
   <div class="front-end-skill about-container__item">
