--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
                     I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and 
                     mobile responsiveness have a look at the code for more details 
                 </p>
-                <a href="https://github.com/Funkateer/website-portfolio">See project on GitHub</a>
+                <a href="https://github.com/Funkateer/website-portfolio" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>RGB Color guessing game</h2>
@@ -55,7 +55,7 @@
                     I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether 
                     playing in easy or hard mode, plus a side page where you can add RGB value and look at the corresponding color 
                 </p>
-                <a href="https://github.com/Funkateer/colorGame">See project on GitHub</a>
+                <a href="https://github.com/Funkateer/colorGame" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Circles</h2>
@@ -63,14 +63,14 @@
                     A simple yet fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound, 
                     I used two libraries paper-full for the shapes and howler for sound effects
                 </p>
-                <a href="https://github.com/Funkateer/circles">See project on GitHub</a>
+                <a href="https://github.com/Funkateer/circles" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Todo list app</h2>
                 <p>
                     The todo list using jQuery, the inevitable! <br>
                 </p>
-                <a href="https://github.com/Funkateer/todoList">See project on GitHub</a>
+                <a href="https://github.com/Funkateer/todoList" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Camping ground rating app </h2>
@@ -78,14 +78,14 @@
                     Fully functional front and back-end app I used Node with Express and mongoose for the server side and Mongo db for database
                     among other libraries
                 </p>
-                <a href="#">See project on GitHub</a>
+                <a href="#" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Movies database search</h2>
                 <p>
                     An app that gives information about movies searched using any word using API's
                 </p>
-                <a href="https://github.com/Funkateer/Movie-Search-App">See project on GitHub</a>
+                <a href="https://github.com/Funkateer/Movie-Search-App" target="_blank">See project on GitHub</a>
             </div>
             <div class="project-list__item">
                 <h2>Your project</h2>
